--- a/templates/EditWriterProfilePage.html
+++ b/templates/EditWriterProfilePage.html
@@ -9,12 +9,29 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"> 
     <link rel="stylesheet" href="{% static 'css/EditWriterProfilePage.css' %}"> 
     <title>Home Page</title>  
+    <style>
+        #image-logo{
+            width:10%;
+            height:10%;
+        }
+        .container{
+            margin-top: 5%;
+        }
+        #update-image{
+            position: absolute;
+            left: 47.5%;
+            bottom: 43%;
+        }
+        #profile-image{
+            margin: 4%;
+        }
+    </style>
     
 </head>  
 <body>  
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark ">
-        <a class="navbar-brand text-white" href="{% url 'home' %}"><img src="{%static 'image/logo.png'%}" width="80" > Reading & Writing Books</a>
+        <a class="navbar-brand text-white" href="{% url 'home' %}"><img id= "image-logo" src="{%static 'image/logo.png'%}" width="80" > Reading & Writing Books</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -33,6 +50,9 @@
                     <input type="search" class="nav-link" placeholder="Search">
                 </li>
                 <li class="nav-item mx-2">
+                    <a class="nav-link text-white" href="{%url 'writer_profile'%}">Profile</a>
+                </li>
+                <li class="nav-item mx-2">
                     <a class="nav-link text-white" href="{% url 'about_us' %}">About Us</a>
                 </li>
             </ul>
@@ -45,12 +65,12 @@
     </nav>
 </header>
 <section>
-    <div>
-        <img src="https://img.freepik.com/premium-photo/animated-girl-cartoon-character-generated-ai_652383-2311.jpg?ga=GA1.1.209331547.1723160267&semt=ais_hybrid" alt="user image">
-        <a href="">Upload Photo</a>
-    </div>
     <div class="container">
         <h2>Edit Profile</h2>
+        <div>
+            <img id= "profile-image" src="https://img.freepik.com/premium-photo/animated-girl-cartoon-character-generated-ai_652383-2311.jpg?ga=GA1.1.209331547.1723160267&semt=ais_hybrid" alt="user image">
+            <a href="" id="update-image">Upload Photo</a>
+        </div>
         <form method="POST" action="{% url 'edit_writer_profile' user.id %}">
             {% csrf_token %}
             <input type="text" placeholder="First Name .." name="first_name" value="{{ user.first_name }}">
@@ -59,7 +79,7 @@
             <input type="email" placeholder="Email .." name="email" value="{{ user.email }}">
             <textarea placeholder="Bio .." name="bio">{{ user.bio }}</textarea>
             <button type="submit">Update Profile</button>
-            <button type="button"><a href="{% url 'writer_profile' %}">View Profile</a></button>
+            {% comment %} <button type="button"><a href="{% url 'writer_profile' %}">View Profile</a></button> {% endcomment %}
         </form>
         {% if messages %}
             <ul class="messages">
